--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@ ul  {
     margin: 0;
     padding-left: 0;
 }
+p{
+    margin: 0;
+}
 img{
     display: block;
 }
@@ -55,6 +58,7 @@ body {
 .nav .nav-list a:hover,
 .nav .nav-list a:focus{
     color: #404BBF;
+    
 }
 .nav .nav-list link:active{
     color: #404BBF;
@@ -123,6 +127,16 @@ justify-content: space-between;
 background-color: #2E2F42;
 text-align: center;
 padding:188px 0;
+background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+rgba(46, 47, 66, 0.7)),
+url(../images/hero-image.jpg);
+
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
+max-width: 1440px;
+margin:auto;
+
 }
 .title-hero{
     margin-top: 0;
@@ -183,16 +197,20 @@ padding:188px 0;
     margin-top: 0;
     margin-bottom: 0;
     
+
+    
     
 }
 
 .pros-list{
     display: flex;
     gap: 24px;
+    
    
 }
 .pros-li{
     width: calc((100% - 72px) / 4);
+    width: 264px;
 }
 .visually-hidden {
     position: absolute;
@@ -207,6 +225,21 @@ padding:188px 0;
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
+  .pros-icon{
+    background-color: #F4F4FD;
+    width: 264px;
+    height: 112px;
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid #8E8F99;
+    margin-bottom: 8px;
+    
+  }
+  
+  
 
 .team{
     background-color:#F4F4FD ;
@@ -244,7 +277,7 @@ margin-bottom: 72px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-top: 0;
-   margin-bottom: 0;
+   margin-bottom: 8px;
 }
 .team-ul{
     text-align: center;
@@ -256,6 +289,24 @@ margin-bottom: 72px;
     padding: 32px 0;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.team-second-list{
+    display:flex;
+justify-content: center;
+align-items: center;
+gap: 24px;
+}
+.team-icon{
+    flex-shrink: 0;
+}
+.team-link-icon{
+    display: flex;
+    width: 40px;
+    height: 40px;
+    background-color: #4D5AE5;
+    border-radius: 50% ;
+    justify-content: center;
+    align-items: center;
 }
 
 .portfolio{
@@ -305,7 +356,49 @@ row-gap: 48px;
 
 .portfolio-li{ 
     width: calc((100% - 48px) / 3);
-    
+    cursor: pointer;
+   
+}
+
+.box-overlay{
+    position: relative;
+    overflow: hidden;
+}
+.overlay{
+    width: 296px;
+    font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height:1.5;
+letter-spacing: 0.03em;
+    background-color: #4D5AE5;
+  color: #F4F4FD;
+ padding: 40px 32px ;
+ padding-bottom: 0;
+  
+  position: absolute;
+  top:0;
+  width:100%;
+  height:100%;
+  transform:translateY(100%);
+  transition:transform 250ms ease-in-out;
+  
+}
+.portfolio-li:hover .overlay,
+.portfolio-li:focus .ocerlay{
+    transform:translateY(0);
+
+}
+  
+  
+
+   
+
+
+
+.portfolio-li:hover,
+.portfolio-li:focus{
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .portolio-block{
     padding: 32px 16px;
@@ -337,19 +430,55 @@ row-gap: 48px;
 .footer .logo-span{
     color: #F4F4FD;
 }
-.footer .text{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #F4F4FD;
-    letter-spacing: 0.02em;
-    margin-bottom: 0;
-    margin-top:0;
-   
-    max-width: 264px;
-    flex-wrap: wrap;
-}
 .footer{
     padding-top: 100px;
     padding-bottom: 100px;
+}
+
+.footer .footer-text{
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    color: #F4F4FD;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+    margin-top: 0;
+
+max-width: 264px;
+flex-wrap: wrap;
+}
+.container-footer{
+    display: flex;
+    
+
+}
+.footer-icon-list{
+    display: flex;
+    gap: 16px;
+}
+
+.footer .text{
+    font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height:1.5;
+letter-spacing: 0.03em;
+color:#FFFFFF;
+margin-bottom: 16px;
+margin-top: 0;
+}
+.footer-link-icon{
+    display: flex;
+    width: 40px;
+    height: 40px;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+}
+.social-block{
+    width: 208px;
+height: 80px;
+flex-shrink: 0;
+margin-left: 120px;
 }
