--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ body {
 .head{
     font-family: Roboto, sans-serif;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); ;
    
 }
 
@@ -169,6 +170,7 @@ margin:auto;
     border-radius: 4px;
     min-width: 169px;
     margin: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .hero .hero-button:hover,
@@ -248,6 +250,7 @@ margin:auto;
 .team-list{
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .team .title{
     color: #2E2F42;
@@ -288,7 +291,7 @@ margin-bottom: 72px;
 .block-text{
     padding: 32px 0;
     border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    
 }
 .team-second-list{
     display:flex;
@@ -298,6 +301,7 @@ gap: 24px;
 }
 .team-icon{
     flex-shrink: 0;
+    fill: #f4f4fd;
 }
 .team-link-icon{
     display: flex;
@@ -307,6 +311,11 @@ gap: 24px;
     border-radius: 50% ;
     justify-content: center;
     align-items: center;
+}
+.team-link-icon:hover,
+.team-link-icon:focus{
+    background-color: #404bbf;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio{
@@ -363,6 +372,7 @@ row-gap: 48px;
 .box-overlay{
     position: relative;
     overflow: hidden;
+
 }
 .overlay{
     width: 296px;
@@ -370,18 +380,17 @@ row-gap: 48px;
 font-style: normal;
 font-weight: 400;
 line-height:1.5;
-letter-spacing: 0.03em;
+letter-spacing: 0.02em;
     background-color: #4D5AE5;
   color: #F4F4FD;
- padding: 40px 32px ;
- padding-bottom: 0;
+ padding: 40px 32px;
   
   position: absolute;
   top:0;
   width:100%;
   height:100%;
   transform:translateY(100%);
-  transition:transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 .portfolio-li:hover .overlay,
@@ -399,6 +408,7 @@ letter-spacing: 0.03em;
 .portfolio-li:hover,
 .portfolio-li:focus{
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .portolio-block{
     padding: 32px 16px;
@@ -449,12 +459,19 @@ flex-wrap: wrap;
 }
 .container-footer{
     display: flex;
+    align-items: first baseline;
     
 
+}
+.container-logo{
+    margin-right: 120px;
 }
 .footer-icon-list{
     display: flex;
     gap: 16px;
+}
+.footer-icon{
+    fill: #f4f4fd;
 }
 
 .footer .text{
@@ -480,5 +497,10 @@ margin-top: 0;
     width: 208px;
 height: 80px;
 flex-shrink: 0;
-margin-left: 120px;
+
+}
+.footer-link-icon:hover,
+.footer-link-icon:focus{
+    background-color: #31d0aa;
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
