--- a/css/styles.css
+++ b/css/styles.css
@@ -502,5 +502,5 @@ flex-shrink: 0;
 .footer-link-icon:hover,
 .footer-link-icon:focus{
     background-color: #31d0aa;
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
