--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,7 @@ row-gap: 48px;
 .portfolio-li{ 
     width: calc((100% - 48px) / 3);
     cursor: pointer;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
    
 }
 
@@ -408,7 +409,7 @@ letter-spacing: 0.02em;
 .portfolio-li:hover,
 .portfolio-li:focus{
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    
 }
 .portolio-block{
     padding: 32px 16px;
@@ -479,7 +480,7 @@ flex-wrap: wrap;
 font-style: normal;
 font-weight: 500;
 line-height:1.5;
-letter-spacing: 0.03em;
+letter-spacing: 0.02em;
 color:#FFFFFF;
 margin-bottom: 16px;
 margin-top: 0;
@@ -492,6 +493,7 @@ margin-top: 0;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 .social-block{
     width: 208px;
@@ -502,5 +504,5 @@ flex-shrink: 0;
 .footer-link-icon:hover,
 .footer-link-icon:focus{
     background-color: #31d0aa;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
