--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ body {
     letter-spacing: 0.02em; 
     padding: 24px 0;
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list .link:hover::after{
     position:absolute;
@@ -63,6 +64,7 @@ body {
     background-color: #404bbf;
     content:"";
 
+
 }
 .curennt-page-link::after{
     position:absolute;
@@ -74,6 +76,7 @@ body {
     border-radius: 2px;
     background-color: #404bbf;
     content:"";
+
     
 }
 .curennt-page-link{
