--- a/css/styles.css
+++ b/css/styles.css
@@ -118,13 +118,14 @@ body {
 .address {
     font-style: normal;
 }
-.address a{
+.infor{
     color: #434455;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
    margin-left: auto;
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .nav-address{
@@ -137,8 +138,8 @@ body {
 }
 
 
-.address link:hover,
-.address link:focus{
+.infor:hover,
+.infor:focus{
     color: #404BBF;
 }
 .container{
