--- a/css/styles.css
+++ b/css/styles.css
@@ -625,8 +625,79 @@ letter-spacing: 0.05em;
     fill: #FFFFFF;
     
 }
-.backdrop{
+
+.register-form{
+    display: flex;
+    flex-direction: column;
     width: 408px;
     height: 584px;
+    outline: 1px solid black;
+    padding:  24px;
+    
+}
+.modal-label{
+    display: flex;
+    flex-direction: column;
    
+    
+    
+}
+.modal-btn{
+    display: flex;
+    width: 24px;
+    height: 24px;
+    border-radius: 50% 50%;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+    margin-bottom: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    background-color: #E7E9FC;
+    cursor: pointer;
+}
+.modal-btn:active {
+    background-color: #404BBF;
+    border: none;
+}
+.modal-btn:active .btn-close {
+    fill: #fff;
+}
+.register-form-title{
+    margin-bottom: 16px;
+    color: #2E2F42;
+text-align: center;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 1.5; 
+letter-spacing: 0.03em;
+}
+.name-label{
+    color: var(--LIGHT-SLATE, #8E8F99);
+
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 1.2;
+letter-spacing: 0.05em;
+margin-bottom: 4px;
+}
+.label-box{
+    display: flex;
+    margin-bottom: 8px;
+}
+.modal-input{
+    width: 360px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid  #4D5AE5;
+}
+.modal-input::placeholder{
+    color: rgba(46, 47, 66, 0.40);
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 1.2; 
+letter-spacing: 0.05em;
 }
