--- a/css/styles.css
+++ b/css/styles.css
@@ -673,7 +673,7 @@ line-height: 1.5;
 letter-spacing: 0.03em;
 }
 .name-label{
-    color: var(--LIGHT-SLATE, #8E8F99);
+    color:  #8E8F99;
 
 font-size: 12px;
 font-style: normal;
@@ -686,6 +686,9 @@ margin-bottom: 4px;
     display: flex;
     margin-bottom: 8px;
 }
+.label-box:nth-last-child(3){
+    margin-bottom: 16px;
+}
 .modal-input{
     width: 360px;
     height: 40px;
@@ -694,10 +697,65 @@ margin-bottom: 4px;
     border: 1px solid  #4D5AE5;
 }
 .modal-input::placeholder{
-    color: rgba(46, 47, 66, 0.40);
+color: rgba(46, 47, 66, 0.40);
 font-size: 12px;
 font-style: normal;
 font-weight: 400;
 line-height: 1.2; 
 letter-spacing: 0.05em;
+text-align: start;
 }
+.comment-text {
+    width: 360px;
+height: 120px;
+}
+.textarea {
+    resize: none;}
+
+
+ .modal-point{
+    flex-direction: row;
+   
+ }
+ .privacy-text{
+    color:  #8E8F99;
+   
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.2; 
+    letter-spacing: 0.04em;
+    margin-left: 8px;
+    
+ }
+ .privacy-link{
+    color: #4D5AE5;
+
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 1.3;
+letter-spacing: 0.05em;
+text-decoration-line: underline;
+ }
+ .send-button{
+display: inline-flex;
+width: 169px;
+height: 56px;
+background-color:  #4D5AE5;
+border-radius: 4px;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+border: none;
+color: #FFF;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 1.5; /* 150% */
+letter-spacing: 0.06em;
+justify-content: center;
+align-items: center;
+margin: 24px auto;
+margin-bottom: 0;
+padding: 16px 32px;
+cursor: pointer;
+ }
